deploy/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cla-ingress-svcl8tr
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
